--- a/guia3.tex
+++ b/guia3.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 \section{Guía 3}
-En la segunda semana del curso tenemos por objetivo
+En la tercera semana del curso tenemos por objetivo
 \begin{itemize}
     \item Comparar espectralmente imagenes corregidas y no corregidas atmosfericamente.
     \item Corregir las imagenes por el método de substracción de cuerpo obscuro.
