Agregamos la primer version de los videos de la clase 1 con sus imagenes

--- a/Documentos/Videos/preamble.tex
+++ b/Documentos/Videos/preamble.tex
@@ -16,8 +16,8 @@
 \usepackage[margin=10pt,font=small,labelfont=bf, labelsep=endash]{caption}
 
 % Citas
-%\usepackage[backend=biber,style=ieee]{biblatex}
-%\addbibresource{biblio.bib}
+\usepackage[backend=biber,style=ieee]{biblatex}
+\addbibresource{biblio.bib}
 
 % Codigo
 \usepackage{listings}
